--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,28 @@
     <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-    <h1>{% block header %}{% endblock %}</h1>
+<div class="container-fluid">
+ <div class="row-fluid">
+  <div class="span12">
+    <div class="navbar" style="margin-top: 10px;">
+     <div class="navbar-inner">
+      <a class="brand" href="{% url manager.views.main %}">Syrup</a>
+      <ul class="nav">
+        <li class="divider-vertical"></li>
+        <li><a href="{% url manager.views.template_list %}">templates</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="{% url manager.views.node_list %}">items</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="{% url manager.views.node_table %}">lists</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="{% url manager.views.node_tree %}">trees</a></li>
+        <li class="divider-vertical"></li>
+      </ul>
+      <form class="navbar-search pull-right">
+          <input type="text" class="search-query" placeholder="Search">
+      </form>
+     </div>
     </div>
-    <div class="container">
       <a href="{% url manager.views.main %}"><i class="icon-home"></i></a> &gt;
       <small>
         {% for n in request.session.node_history.get_nodes %}
@@ -16,10 +34,22 @@
         {% if not forloop.last %} &gt; {% endif %}
         {% endfor %}
       </small>
-    </div>
-    <div class="container">
+  </div>
+ </div>
+ <div class="row-fluid">
+  <div class="span1">
+  </div>
+  <div class="span9">
+      <h1>{% block header %}{% endblock %}</h1>
+      <p>{% block content_menu %}{% endblock %}</p>
       {% block content %}{% endblock %}
-    </div>
+      <hr><div style="text-align: center"><small>We.Love.Opensource.</small></div>
+  </div>
+  <div class="span2">
+  </div>
+ </div>
+</div>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
   </body>
 </html>
