--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
         <li><a href="{% url manager.views.node_tree %}">trees</a></li>
         <li class="divider-vertical"></li>
       </ul>
-      <form class="navbar-search pull-right">
-          <input type="text" class="search-query" placeholder="Search">
+      <form class="navbar-search pull-right" method="get" action="{% url manager.views.search %}">
+          <input type="text" class="search-query" name="q" placeholder="Search" />
       </form>
      </div>
     </div>
