--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
-{% load staticfiles %}
-<!DOCTYPE html>
+{% load staticfiles %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
+    <script src="{% static "jquery/jquery-1.8.2.min.js" %}"></script>
+    <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+{% block htmlhead %}{% endblock %}
   </head>
   <body>
 <div class="container-fluid">
@@ -49,7 +51,5 @@
   </div>
  </div>
 </div>
-    <script src="{% static "jquery/jquery-1.8.2.min.js" %}"></script>
-    <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
   </body>
 </html>
