--- a/templates/manager/item_detail.html
+++ b/templates/manager/item_detail.html
@@ -9,6 +9,7 @@
 <h4>parameters</h4>
 <form method="post" action="{% url manager.views.node_set_param %}">
     {% csrf_token %}
+    <input type="hidden" name="node_id" value="{{node.id}}"></input>
     <input type="hidden" id="param_edit_id" name="param_id" value=""></input>
     <table class="table table-hover table-condensed table-bordered">
         {% for param in params %}
