--- a/templates/manager/template_list.html
+++ b/templates/manager/template_list.html
@@ -3,7 +3,7 @@
 {% block header %}Templates{% endblock %}
 
 {% block content_menu %}
-<a class="btn btn-success" href="{% url manager.views.template_new %}">Create new template</a>
+<a class="btn btn-success btn-small" href="{% url manager.views.template_new %}">Create new template</a>
 {% endblock %}
 
 {% block content %}
