--- a/templates/manager/node_list.html
+++ b/templates/manager/node_list.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block header %}Items{% endblock %}
+{% block header %}Nodes{% endblock %}
 
 {% block content_menu %}
-<a class="btn btn-success" href="{% url manager.views.template_list %}">Create new item from template</a>
+<a class="btn btn-success btn-small" href="{% url manager.views.template_list %}">Create new item from template</a>
 {% endblock %}
 
 {% block content %}
