--- a/templates/manager/template_list.html
+++ b/templates/manager/template_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block pagetitle %}templates{% endblock %}
 {% block header %}Templates{% endblock %}
 
 {% block content_menu %}
