--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}<!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Syrup: {% block pagetitle %}{% endblock %}</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
     <script src="{% static "jquery/jquery-1.8.2.min.js" %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
