--- a/templates/manager/main.html
+++ b/templates/manager/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block header %}
-{% endblock %}
+{% block pagetitle %}Manager{% endblock %}
+{% block header %}{% endblock %}
 {% block content %}
 <hr>
 <form class="form-search" method="get" action="{% url manager.views.search %}"
