--- a/templates/manager/message.html
+++ b/templates/manager/message.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block pagetitle %}message{% endblock %}
 {% block header %}Message{% endblock %}
 {% block content %}
 <div>
