--- a/templates/manager/node_list.html
+++ b/templates/manager/node_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% block header %}Nodes{% endblock %}
+{% block pagetitle %}items{% endblock %}
+{% block header %}Items{% endblock %}
 
 {% block content_menu %}
 <a class="btn btn-success btn-small" href="{% url manager.views.template_list %}">Create new item from template</a>
