--- a/templates/manager/node_new.html
+++ b/templates/manager/node_new.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block pagetitle %}new node{% endblock %}
 {% block header %}Create new node{% endblock %}
 {% block content %}
 <form action="{% url manager.views.node_create %}" method="post">
