--- a/templates/manager/node_table.html
+++ b/templates/manager/node_table.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% block header %}Node tables{% endblock %}
+{% block pagetitle %}node table{% endblock %}
+{% block header %}Node table{% endblock %}
 {% block content %}
 <form class="form" method="get" action="{% url manager.views.node_table %}">
 <label for="template">List all items linked to template</label>
