--- a/templates/manager/search_results.html
+++ b/templates/manager/search_results.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block header %}
-{% endblock %}
+{% block pagetitle %}search results{% endblock %}
+{% block header %}Search results{% endblock %}
 {% block content %}
 <h2>Search results for [{{query}}]</h2>
 <ul>
